--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -2,13 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.martinwalls.meatmanager.ui.MainActivity"
     >
 
+    <!-- actionbar -->
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,6 +24,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <!-- frame for fragments -->
     <FrameLayout
         android:id="@+id/fragment_holder"
         android:layout_width="match_parent"
