--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
 
+    <!-- date divider -->
     <include
         android:id="@+id/date_divider"
         layout="@layout/item_section_divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        tools:visibility="visible"
         />
 
     <LinearLayout
@@ -31,24 +30,22 @@
         android:paddingBottom="16dp"
         >
 
+        <!-- list of products in order -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:overScrollMode="never"
-            tools:itemCount="2"
-            tools:listitem="@layout/item_product"
             />
 
+        <!-- destination text -->
         <TextView
             android:id="@+id/order_dest"
             style="@style/ItemInfoSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical|start"
-            tools:text="Destination"
             />
 
     </LinearLayout>
-
 </LinearLayout>
