--- a/app/src/main/res/layout/item_single_info.xml
+++ b/app/src/main/res/layout/item_single_info.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal"
     >
 
+    <!-- primary text -->
     <TextView
         android:id="@+id/info_primary"
         style="@style/TextDark"
