--- a/app/src/main/res/layout/item_stock.xml
+++ b/app/src/main/res/layout/item_stock.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/stock_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,15 +19,16 @@
         android:layout_weight="1"
         >
 
+        <!-- product name text -->
         <TextView
             android:id="@+id/name"
             style="@style/ItemInfoPrimary"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            tools:text="Product name"
             />
 
+        <!-- location text -->
         <TextView
             android:id="@+id/location"
             style="@style/ItemInfoSecondary"
@@ -40,7 +40,6 @@
             android:maxLines="1"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            tools:text="UK1535"
             />
 
     </RelativeLayout>
@@ -52,6 +51,7 @@
         android:orientation="vertical"
         >
 
+        <!-- quantity mass text -->
         <TextView
             android:id="@+id/mass"
             style="@style/ItemAmountPrimary"
@@ -59,9 +59,9 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            tools:text="1900.00 kg"
             />
 
+        <!-- quantity boxes text -->
         <TextView
             android:id="@+id/num_boxes"
             style="@style/ItemAmountSecondary"
@@ -69,8 +69,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            tools:text="100 boxes"
             />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
