--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -2,12 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid
-        android:color="#ccc"
-        />
+    <solid android:color="#ccc" />
 
-    <corners
-        android:radius="4dp"
-        />
+    <corners android:radius="4dp" />
 
 </shape>
