--- a/app/src/main/res/layout/activity_contract_detail.xml
+++ b/app/src/main/res/layout/activity_contract_detail.xml
@@ -2,11 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.contracts.ContractDetailActivity"
     >
 
     <!-- Products list -->
@@ -17,8 +15,6 @@
         android:overScrollMode="never"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        tools:itemCount="2"
-        tools:listitem="@layout/item_product_options"
         />
 
     <!-- Destination -->
@@ -35,7 +31,6 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="Destination"
         />
 
     <!-- Repeat on -->
@@ -50,7 +45,6 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="Repeats every week on Monday"
         />
 
     <!-- Next repeat -->
@@ -65,7 +59,6 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="Next repeat is in 3 days"
         />
 
     <!-- Reminder -->
@@ -80,7 +73,6 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="Reminder 2 days in advance"
         />
 
     <ImageView
@@ -90,6 +82,7 @@
         app:srcCompat="@drawable/divider_thin"
         />
 
+    <!-- Related stock -->
     <include
         android:id="@+id/related_stock_title"
         layout="@layout/item_section_divider"
@@ -102,8 +95,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:overScrollMode="never"
-        tools:itemCount="1"
-        tools:listitem="@layout/item_current_stock_in_location"
         />
 
 </LinearLayout>
