--- a/app/src/main/res/layout/activity_edit_contract.xml
+++ b/app/src/main/res/layout/activity_edit_contract.xml
@@ -2,12 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.orders.EditOrderActivity"
     >
 
     <ScrollView
@@ -31,6 +29,7 @@
                 android:orientation="vertical"
                 >
 
+                <!-- product input -->
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_product"
                     style="@style/AppTextInputLayout.Searchable"
@@ -57,6 +56,7 @@
                     android:orientation="horizontal"
                     >
 
+                    <!-- quantity mass input -->
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/input_layout_quantity_mass"
                         android:layout_width="0dp"
@@ -75,6 +75,7 @@
                             />
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <!-- quantity boxes input -->
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/input_layout_quantity_boxes"
                         android:layout_width="0dp"
@@ -92,6 +93,7 @@
                             />
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <!-- done button -->
                     <ImageButton
                         android:id="@+id/product_btn_done"
                         android:layout_width="wrap_content"
@@ -104,6 +106,7 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- add another product button -->
             <TextView
                 android:id="@+id/add_product"
                 style="@style/AddAnotherProductText"
@@ -122,15 +125,15 @@
                 android:text="@string/contracts_add_product"
                 />
 
+            <!-- list of products already added -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/products_added_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
-                tools:itemCount="1"
-                tools:listitem="@layout/item_product_options"
                 />
 
+            <!-- destination input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_destination"
                 style="@style/AppTextInputLayout.Searchable"
@@ -149,6 +152,7 @@
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <!-- repeat interval input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_repeat_interval"
                 android:layout_width="match_parent"
@@ -165,6 +169,7 @@
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <!-- repeat on input -->
             <LinearLayout
                 android:id="@+id/input_repeat_on"
                 android:layout_width="match_parent"
@@ -174,7 +179,6 @@
                 android:layout_marginEnd="4dp"
                 android:orientation="horizontal"
                 android:visibility="gone"
-                tools:visibility="visible"
                 >
 
                 <TextView
@@ -196,6 +200,7 @@
 
             </LinearLayout>
 
+            <!-- reminder input -->
             <LinearLayout
                 android:id="@+id/input_reminder"
                 android:layout_width="match_parent"
@@ -257,11 +262,10 @@
                     />
 
             </LinearLayout>
-
         </LinearLayout>
-
     </ScrollView>
 
+    <!-- search results list -->
     <LinearLayout
         android:id="@+id/search_results_layout"
         style="@style/SearchResultsLayout"
@@ -300,6 +304,6 @@
             android:paddingBottom="16dp"
             android:text="@string/search_no_matches"
             />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
