--- a/app/src/main/res/layout/activity_edit_location.xml
+++ b/app/src/main/res/layout/activity_edit_location.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,9 +13,9 @@
         android:layout_marginTop="@dimen/screen_margin_top"
         android:layout_marginEnd="@dimen/screen_margin_horizontal"
         android:orientation="vertical"
-        tools:context=".ui.locations.NewLocationActivity"
         >
 
+        <!-- name input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_location_name"
             android:layout_width="match_parent"
@@ -33,6 +32,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- location type input -->
         <LinearLayout
             android:id="@+id/row_location_type"
             android:layout_width="match_parent"
@@ -62,6 +62,7 @@
 
         </LinearLayout>
 
+        <!-- address line 1 input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_addr_1"
             android:layout_width="match_parent"
@@ -79,6 +80,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- address line 2 input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_addr_2"
             android:layout_width="match_parent"
@@ -96,6 +98,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- city input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_city"
             android:layout_width="match_parent"
@@ -113,6 +116,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- postcode input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_postcode"
             android:layout_width="match_parent"
@@ -130,6 +134,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- country input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_country"
             android:layout_width="match_parent"
@@ -147,6 +152,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- email input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_email"
             android:layout_width="match_parent"
@@ -164,6 +170,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- phone input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_phone"
             android:layout_width="match_parent"
