--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -2,12 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.orders.EditOrderActivity"
     >
 
     <ScrollView
@@ -31,6 +29,7 @@
                 android:orientation="vertical"
                 >
 
+                <!-- product input -->
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_product"
                     style="@style/AppTextInputLayout.Searchable"
@@ -57,6 +56,7 @@
                     android:orientation="horizontal"
                     >
 
+                    <!-- quantity mass input -->
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/input_layout_quantity_mass"
                         android:layout_width="0dp"
@@ -75,6 +75,7 @@
                             />
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <!-- quantity boxes input -->
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/input_layout_quantity_boxes"
                         android:layout_width="0dp"
@@ -92,6 +93,7 @@
                             />
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <!-- done button -->
                     <ImageButton
                         android:id="@+id/product_btn_done"
                         android:layout_width="wrap_content"
@@ -101,9 +103,11 @@
                         android:padding="4dp"
                         app:srcCompat="@drawable/ic_done"
                         />
+
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- add another product button -->
             <TextView
                 android:id="@+id/add_product"
                 style="@style/AddAnotherProductText"
@@ -122,15 +126,15 @@
                 android:text="@string/orders_add_product"
                 />
 
+            <!-- list of products already added -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/products_added_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
-                tools:itemCount="1"
-                tools:listitem="@layout/item_product_options"
                 />
 
+            <!-- destination input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_destination"
                 style="@style/AppTextInputLayout.Searchable"
@@ -149,6 +153,7 @@
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <!-- date input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_date"
                 android:layout_width="match_parent"
@@ -165,6 +170,7 @@
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <!-- completed checkbox input -->
             <LinearLayout
                 android:id="@+id/row_completed"
                 android:layout_width="match_parent"
@@ -191,11 +197,10 @@
                     />
 
             </LinearLayout>
-
         </LinearLayout>
-
     </ScrollView>
 
+    <!-- search results list -->
     <LinearLayout
         android:id="@+id/search_results_layout"
         style="@style/SearchResultsLayout"
@@ -234,6 +239,6 @@
             android:paddingBottom="16dp"
             android:text="@string/search_no_matches"
             />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
