--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.locations.LocationDetailActivity"
     >
 
+    <!-- name text -->
     <TextView
         android:id="@+id/name"
         style="@style/DetailsText"
@@ -21,9 +19,9 @@
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
         android:textColor="?textColorPrimary"
-        tools:text="Location name"
         />
 
+    <!-- location type text -->
     <TextView
         android:id="@+id/location_type"
         style="@style/DetailsText"
@@ -35,9 +33,9 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="Storage"
         />
 
+    <!-- address text -->
     <TextView
         android:id="@+id/address"
         style="@style/DetailsText"
@@ -51,9 +49,9 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="12 High Street,\nLancaster,\nLA1 2PF,\nUK"
         />
 
+    <!-- email text -->
     <TextView
         android:id="@+id/email"
         style="@style/DetailsText"
@@ -65,9 +63,9 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="abc@example.com"
         />
 
+    <!-- phone text -->
     <TextView
         android:id="@+id/phone"
         style="@style/DetailsText"
@@ -79,7 +77,6 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="01524 842567"
         />
 
 </LinearLayout>
