--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -21,6 +21,7 @@
         android:background="@color/white"
         />
 
+    <!-- page indicator -->
     <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
         android:id="@+id/dots_indicator"
         android:layout_width="wrap_content"
@@ -36,6 +37,7 @@
         app:dotsStrokeWidth="4dp"
         />
 
+    <!-- skip button -->
     <Button
         android:id="@+id/btn_skip"
         android:layout_width="wrap_content"
@@ -50,6 +52,7 @@
         android:textColor="@color/white"
         />
 
+    <!-- next button -->
     <Button
         android:id="@+id/btn_next"
         android:layout_width="wrap_content"
