--- a/app/src/main/res/layout/dialog_add_new_meat_type.xml
+++ b/app/src/main/res/layout/dialog_add_new_meat_type.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     >
 
+    <!-- meat type input -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout_meat_type"
         style="@style/AppTextInputLayout"
@@ -34,6 +35,7 @@
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
         >
 
+        <!-- cancel button -->
         <Button
             android:id="@+id/btn_cancel"
             style="?borderlessButtonStyle"
@@ -43,6 +45,7 @@
             android:text="@string/action_cancel"
             />
 
+        <!-- done button -->
         <Button
             android:id="@+id/btn_done"
             style="?borderlessButtonStyle"
@@ -51,6 +54,6 @@
             android:layout_alignParentEnd="true"
             android:text="@string/action_done"
             />
-    </RelativeLayout>
 
+    </RelativeLayout>
 </LinearLayout>
