--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     >
 
+    <!-- title -->
     <TextView
         style="?dialogTitleStyle"
         android:layout_width="match_parent"
@@ -19,6 +20,7 @@
         android:text="@string/stock_product_new"
         />
 
+    <!-- name input -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout_product_name"
         android:layout_width="match_parent"
@@ -38,6 +40,7 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- meat type input -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout_meat_type"
         android:layout_width="match_parent"
@@ -65,6 +68,7 @@
         android:orientation="horizontal"
         >
 
+        <!-- cancel button -->
         <Button
             android:id="@+id/btn_cancel"
             style="?borderlessButtonStyle"
@@ -79,6 +83,7 @@
             android:layout_weight="1"
             />
 
+        <!-- done button -->
         <Button
             android:id="@+id/btn_done"
             style="?borderlessButtonStyle"
@@ -86,6 +91,6 @@
             android:layout_height="wrap_content"
             android:text="@string/action_done"
             />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
