--- a/app/src/main/res/layout/dialog_confirm_cancel.xml
+++ b/app/src/main/res/layout/dialog_confirm_cancel.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     >
 
+    <!-- dialog message -->
     <TextView
         style="@style/TextNormal"
         android:layout_width="match_parent"
@@ -33,6 +34,7 @@
             android:layout_weight="1"
             />
 
+        <!-- no button -->
         <Button
             android:id="@+id/btn_no"
             style="?borderlessButtonStyle"
@@ -41,6 +43,7 @@
             android:text="@string/action_no"
             />
 
+        <!-- yes button -->
         <Button
             android:id="@+id/btn_yes"
             style="?borderlessButtonStyle"
@@ -48,6 +51,6 @@
             android:layout_height="wrap_content"
             android:text="@string/action_yes"
             />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
