--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -25,12 +24,14 @@
             android:orientation="horizontal"
             >
 
+            <!-- left currency picker -->
             <NumberPicker
                 android:id="@+id/currency_picker_left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
 
+            <!-- primary currency -->
             <TextView
                 android:id="@+id/currency_primary"
                 style="@style/ExchangeCurrentCurrency"
@@ -38,9 +39,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="end|center_vertical"
-                tools:text="GBP"
                 />
 
+            <!-- swap button -->
             <ImageButton
                 android:id="@+id/swap_currencies"
                 android:layout_width="wrap_content"
@@ -55,6 +56,7 @@
                 app:srcCompat="@drawable/ic_swap"
                 />
 
+            <!-- secondary currency -->
             <TextView
                 android:id="@+id/currency_secondary"
                 style="@style/ExchangeCurrentCurrency"
@@ -62,14 +64,15 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="start|center_vertical"
-                tools:text="HKD"
                 />
 
+            <!-- right currency picker -->
             <NumberPicker
                 android:id="@+id/currency_picker_right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
+
         </LinearLayout>
 
         <!-- main view showing current rate -->
@@ -80,6 +83,7 @@
             android:orientation="horizontal"
             >
 
+            <!-- primary currency value -->
             <EditText
                 android:id="@+id/currency_primary_value"
                 style="@style/ExchangeRateText.Primary"
@@ -93,6 +97,7 @@
                 android:text="@string/exchange_primary_start_value"
                 />
 
+            <!-- ":" separator -->
             <TextView
                 style="@style/ExchangeRateText.Primary"
                 android:layout_width="wrap_content"
@@ -103,6 +108,7 @@
                 android:text="@string/exchange_currency_separator"
                 />
 
+            <!-- secondary currency value -->
             <TextView
                 android:id="@+id/currency_secondary_value"
                 style="@style/ExchangeRateText.Secondary"
@@ -111,11 +117,11 @@
                 android:layout_weight="1"
                 android:gravity="start|center_vertical"
                 android:maxLines="1"
-                tools:text="2.35"
                 />
 
         </LinearLayout>
 
+        <!-- list of previous conversions -->
         <com.martinwalls.meatmanager.ui.common.recyclerview.CustomRecyclerView
             android:id="@+id/exchange_history"
             android:layout_width="match_parent"
@@ -140,6 +146,7 @@
             android:layout_weight="1"
             />
 
+        <!-- last updated time text -->
         <TextView
             android:id="@+id/last_update_time"
             style="@style/TextNormal"
@@ -148,8 +155,8 @@
             android:layout_marginBottom="8dp"
             android:gravity="center"
             android:textSize="14sp"
-            tools:text="Last updated at 12:23"
             />
+
     </LinearLayout>
 
     <TextView
