--- a/app/src/main/res/layout/fragment_stock.xml
+++ b/app/src/main/res/layout/fragment_stock.xml
@@ -2,17 +2,16 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
+    <!-- list of stock items -->
     <com.martinwalls.meatmanager.ui.common.recyclerview.CustomRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="ifContentScrolls"
-        tools:visibility="gone"
         />
 
     <TextView
