--- a/app/src/main/res/layout/fragment_tutorial_meat_types.xml
+++ b/app/src/main/res/layout/fragment_tutorial_meat_types.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?colorPrimaryDark"
     >
 
+    <!-- title -->
     <TextView
         android:id="@+id/title"
         style="@style/TutorialTitleText"
@@ -20,6 +19,7 @@
         android:text="@string/tutorial_meat_types_title"
         />
 
+    <!-- list of suggested meat types -->
     <LinearLayout
         android:id="@+id/meat_types_layout"
         android:layout_width="match_parent"
@@ -44,12 +44,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            tools:itemCount="4"
-            tools:listitem="@layout/item_tutorial_meat_type"
             />
 
     </LinearLayout>
 
+    <!-- custom meat type button -->
     <Button
         android:id="@+id/btn_custom_meat_type"
         style="@style/TutorialButtonSecondary"
@@ -61,6 +60,7 @@
         android:text="@string/tutorial_meat_types_add_custom"
         /> <!-- bottom bar is 56 dp in activity layout -->
 
+    <!-- custom input layout -->
     <RelativeLayout
         android:id="@+id/green_bg"
         android:layout_width="match_parent"
@@ -70,6 +70,7 @@
         android:visibility="gone"
         >
 
+        <!-- title -->
         <TextView
             android:id="@+id/title_custom"
             style="@style/TutorialTitleText"
@@ -92,6 +93,7 @@
             android:orientation="vertical"
             >
 
+            <!-- custom meat type input -->
             <EditText
                 android:id="@+id/edit_text_custom"
                 android:layout_width="match_parent"
@@ -103,6 +105,7 @@
                 android:textColorHint="@color/tutorial_text_secondary"
                 />
 
+            <!-- done button -->
             <Button
                 android:id="@+id/btn_custom_done"
                 style="@style/TutorialButtonSecondary"
@@ -115,5 +118,4 @@
 
         </LinearLayout>
     </RelativeLayout>
-
 </RelativeLayout>
