--- a/app/src/main/res/layout/fragment_tutorial_welcome.xml
+++ b/app/src/main/res/layout/fragment_tutorial_welcome.xml
@@ -7,7 +7,6 @@
     android:background="?colorPrimary"
     >
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,6 +14,7 @@
         android:orientation="vertical"
         >
 
+        <!-- title -->
         <TextView
             android:id="@+id/title"
             style="@style/TutorialTitleText"
@@ -24,6 +24,7 @@
             android:text="@string/app_name"
             />
 
+        <!-- subtitle -->
         <TextView
             android:id="@+id/subtitle"
             android:layout_width="match_parent"
@@ -36,5 +37,4 @@
             />
 
     </LinearLayout>
-
 </RelativeLayout>
