--- a/app/src/main/res/layout/item_contract.xml
+++ b/app/src/main/res/layout/item_contract.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
 
+    <!-- date heading -->
     <include
         android:id="@+id/date_divider"
         layout="@layout/item_section_divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        tools:visibility="visible"
         />
 
     <LinearLayout
@@ -31,24 +30,24 @@
         android:paddingBottom="16dp"
         >
 
+        <!-- list of products -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:overScrollMode="never"
-            tools:itemCount="2"
-            tools:listitem="@layout/item_product"
             />
 
+        <!-- repeat text -->
         <TextView
             android:id="@+id/contract_repeat"
             style="@style/ItemInfoSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical|start"
-            tools:text="Repeats every Wednesday"
             />
 
+        <!-- destination text -->
         <TextView
             android:id="@+id/contract_dest"
             style="@style/ItemInfoSecondary"
@@ -56,9 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_vertical|start"
-            tools:text="Destination"
             />
 
     </LinearLayout>
-
 </LinearLayout>
