--- a/app/src/main/res/layout/item_currencies.xml
+++ b/app/src/main/res/layout/item_currencies.xml
@@ -2,12 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
 
+    <!-- currency code text -->
     <TextView
         android:id="@+id/currency_code"
         style="@style/ListItemTextPrimary"
@@ -19,9 +19,9 @@
         android:paddingEnd="8dp"
         android:paddingBottom="16dp"
         android:textStyle="bold"
-        tools:text="GBP"
         />
 
+    <!-- currency name text -->
     <TextView
         android:id="@+id/currency_name"
         style="@style/ListItemTextSecondary"
@@ -34,9 +34,9 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
-        tools:text="British Pound Sterling"
         />
 
+    <!-- favourite button -->
     <ImageButton
         android:id="@+id/favourite_star"
         android:layout_width="wrap_content"
