--- a/app/src/main/res/layout/item_currencies_no_results.xml
+++ b/app/src/main/res/layout/item_currencies_no_results.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -14,6 +13,7 @@
         android:orientation="horizontal"
         >
 
+        <!-- currency code text -->
         <TextView
             android:id="@+id/currency_code"
             style="@style/ListItemTextPrimary"
@@ -25,9 +25,9 @@
             android:paddingEnd="8dp"
             android:paddingBottom="16dp"
             android:textStyle="bold"
-            tools:text="GBP"
             />
 
+        <!-- currency name text -->
         <TextView
             android:id="@+id/currency_name"
             style="@style/ListItemTextSecondary"
@@ -40,9 +40,9 @@
             android:paddingTop="16dp"
             android:paddingEnd="24dp"
             android:paddingBottom="16dp"
-            tools:text="British Pound Sterling"
             />
 
+        <!-- favourite button -->
         <ImageButton
             android:id="@+id/favourite_star"
             android:layout_width="wrap_content"
@@ -53,6 +53,7 @@
             android:padding="2dp"
             app:srcCompat="@drawable/ic_star_outline"
             />
+
     </LinearLayout>
 
     <ImageView
@@ -62,6 +63,7 @@
         app:srcCompat="@drawable/divider_thick"
         />
 
+    <!-- all currencies section title -->
     <TextView
         android:id="@+id/section_title"
         style="@style/ListSectionDividerText"
@@ -80,6 +82,7 @@
         android:orientation="horizontal"
         >
 
+        <!-- no results text -->
         <TextView
             style="@style/ListItemTextSecondary"
             android:layout_width="match_parent"
@@ -90,6 +93,6 @@
             android:paddingBottom="16dp"
             android:text="@string/exchange_choose_currencies_no_results"
             />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
