--- a/app/src/main/res/layout/item_currencies_section.xml
+++ b/app/src/main/res/layout/item_currencies_section.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -15,6 +14,7 @@
         app:srcCompat="@drawable/divider_thick"
         />
 
+    <!-- section title -->
     <TextView
         android:id="@+id/section_title"
         style="@style/ListSectionDividerText"
@@ -24,7 +24,6 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="8dp"
-        tools:text="@string/exchange_favourites"
         />
 
     <LinearLayout
@@ -33,6 +32,7 @@
         android:orientation="horizontal"
         >
 
+        <!-- currency code text -->
         <TextView
             android:id="@+id/currency_code"
             style="@style/ListItemTextPrimary"
@@ -44,9 +44,9 @@
             android:paddingEnd="8dp"
             android:paddingBottom="16dp"
             android:textStyle="bold"
-            tools:text="GBP"
             />
 
+        <!-- currency name text -->
         <TextView
             android:id="@+id/currency_name"
             style="@style/ListItemTextSecondary"
@@ -59,9 +59,9 @@
             android:paddingTop="16dp"
             android:paddingEnd="24dp"
             android:paddingBottom="16dp"
-            tools:text="British Pound Sterling"
             />
 
+        <!-- favourite button -->
         <ImageButton
             android:id="@+id/favourite_star"
             android:layout_width="wrap_content"
@@ -72,6 +72,6 @@
             android:padding="2dp"
             app:srcCompat="@drawable/ic_star_outline"
             />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
