--- a/app/src/main/res/layout/item_product_options.xml
+++ b/app/src/main/res/layout/item_product_options.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -12,6 +11,7 @@
     android:paddingBottom="16dp"
     >
 
+    <!-- product name text -->
     <TextView
         android:id="@+id/product_name"
         android:layout_width="0dp"
@@ -20,7 +20,6 @@
         android:gravity="center_vertical|start"
         android:textColor="?textColorPrimary"
         android:textSize="20sp"
-        tools:text="Product"
         />
 
     <LinearLayout
@@ -30,6 +29,7 @@
         android:orientation="vertical"
         >
 
+        <!-- quantity mass text -->
         <TextView
             android:id="@+id/mass"
             android:layout_width="match_parent"
@@ -38,9 +38,9 @@
             android:gravity="center_vertical|end"
             android:textColor="?textColorPrimary"
             android:textSize="16sp"
-            tools:text="1900.00 kg"
             />
 
+        <!-- number of boxes text -->
         <TextView
             android:id="@+id/num_boxes"
             android:layout_width="match_parent"
@@ -49,10 +49,11 @@
             android:gravity="center_vertical|end"
             android:textColor="?textColorSecondary"
             android:textSize="16sp"
-            tools:text="100 boxes"
             />
+
     </LinearLayout>
 
+    <!-- edit button -->
     <ImageButton
         android:id="@+id/btn_edit"
         android:layout_width="wrap_content"
@@ -63,6 +64,7 @@
         app:srcCompat="@drawable/ic_edit"
         />
 
+    <!-- delete button -->
     <ImageButton
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
@@ -72,4 +74,5 @@
         android:padding="8dp"
         app:srcCompat="@drawable/ic_delete"
         />
+
 </LinearLayout>
