--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- search result item name text -->
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     style="@style/SearchResultsItem.Selectable"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,5 +9,4 @@
     android:paddingTop="16dp"
     android:paddingEnd="24dp"
     android:paddingBottom="16dp"
-    tools:text="Item"
     />
