--- a/app/src/main/res/layout/item_section_divider.xml
+++ b/app/src/main/res/layout/item_section_divider.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- section divider text -->
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     style="@style/ListSectionDividerText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingStart="24dp"
     android:paddingTop="16dp"
     android:paddingEnd="24dp"
-    tools:text="Section divider"
     />
