--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="MissingTranslation"
-    >
-
+<resources>
     <string name="pref_is_first_time_user">is_first_time_user</string>
 
     <string name="pref_last_opened_page">last_opened_page</string>
